# xalg

./: Cargo.toml  README.md
lib_xalg/: Cargo.toml  README.md
lib_xalg/benches/: benchmark.rs
lib_xalg/src/: formula.rs  lib.rs  monomial.rs  polynomial.rs  traits.rs
xalg-bin/: Cargo.toml  README.md
xalg-bin/src/: cli.yml  main.rs
