[package]
name = "lib_xalg"
version = "0.3.1"
repository = "https://github.com/LEXUGE/xalg"
authors = ["Harry Ying <LEXUGEyky@outlook.com>"]
license = "GPL-3.0"
description = "A library for generating random formulas"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "^0.7", features = ["wasm-bindgen"] }
num-traits = "^0.2"

[dev-dependencies]
criterion = "^0.2"

[[bench]]
name = "benchmark"
harness = false